--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section>
         <h2 id="getting-started">Getting Started</h2>
         <p>To use Classless Tufte CSS, simply add the following to your HTML document’s <code>head</code> block:</p>
-        <pre><code>&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/eobrain/classless-tufte-css@v1.0.0/tufte.css"/&gt;</code></pre>
+        <pre><code>&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/eobrain/classless-tufte-css@v1.0.1/tufte.min.css"/&gt;</code></pre>
 
         <aside>
           Alternatively, you can download the CSS and font files and host them yourself.  copy <code>tufte.css</code> and the <code>et-book</code> directory of font files to your project directory, then add the following to your HTML document’s <code>head</code> block:
