Tweak the blockquotes

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
   This is a margin note. Notice there isn’t a number preceding the note.
 &lt;/aside&gt;</code></pre>
         <p>Figures in the margin are created as margin notes, as demonstrated in the next section.</p>
+        <blockquote>A <code>blockquote</code> following a <code>p</code> is also put in the margin.</blockquote>
       </section>
 
       <section>
